src/test/deca/context/invalid/class/30_sousClassAvance2.deca
/* Description:
     tester superClass

    Historique:
      cree le 17/01/2020
*/

class A {
    protected int x ;
    void setX(int x) {
      this.x = x ;
    }

    int getX() {
        return x ;
    }

}

class B extends A {
      int y ;
      void init() {
          setX(0) ;
          y = 0 ;
      }
}

  {
    A a= new A();
    a.init();// Type A ne peut pas utiliser la méthode dans sousClass
  }
